# python-project-83

./: .env  .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: admin-check.yml
page_analyzer/: Makefile  __init__.py  app.py  db_work.py  parser.py  url.py
page_analyzer/templates/: base.html  error_404.html  error_500.html  index.html  show_one_url.html  urls.html
