[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Study project No. 3 'Page Analyzer'"
authors = ["Maksim Lesnikov <maximborzya75@gmail.com>"]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application"
]
packages = [{include = "page_analyzer"}]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^6.0.0"
gunicorn = "^20.1.0"
flask = "^2.3.2"
jinja2 = "^3.1.2"
pytest = "^7.3.1"
validators = "^0.20.0"
psycopg2 = "^2.9.6"
requests = "^2.30.0"
dotenv = "^0.0.5"
werkzeug = "^2.3.4"
datetime = "^5.1"
responses = "^0.23.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
