[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Study project No. 3 'Page Analyzer'"
authors = ["Maksim Lesnikov <maximborzya75@gmail.com>"]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application"
]
packages = [{include = "page_analyzer"}]

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^20.1.0"
validators = "^0.20.0"
requests = "^2.30.0"
responses = "^0.23.1"
python-dotenv = "^1.0.0"
beautifulsoup4 = "^4.12.2"
psycopg2-binary = "^2.9.6"
flask = "2.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
flake8 = "^6.0.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
